objects/Invoice__c/fields/InvoicePaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>InvoicePaymentTerm__c</fullName>
    <description>Populated by Netsuite in Salesforce</description>
    <label>Invoice Payment Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>