objects/Invoice__c/fields/InvoicePONumber__c.field-meta.xml
<CustomField>
    <fullName>InvoicePONumber__c</fullName>
    <description>Updated by Netsuite Boomi integration</description>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>