objects/Invoice__c/fields/InvoiceStatus__c.field-meta.xml
<CustomField>
    <fullName>InvoiceStatus__c</fullName>
    <description>Updated by Netsuite Boomi integration</description>
    <label>Invoice Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>