objects/Invoice__c/fields/NetSuite_ID__c.field-meta.xml
<CustomField>
    <fullName>NetSuite_ID__c</fullName>
    <externalId>true</externalId>
    <label>NetSuite ID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>