objects/Invoice__c/fields/Netsuite_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Reference_Number__c</fullName>
    <label>Netsuite Reference Number</label>
    <length>250</length>
    <type>Text</type>
</CustomField>