objects/Invoice__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <label>Invoice Number (DO NOT USE)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>