objects/Invoice__c/fields/ReconciliationSemiMatchReason__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationSemiMatchReason__c</fullName>
    <description>Describes why we flagged the Reconciliation Status as Semi Match. This field is updated via apex</description>
    <label>Reconciliation Semi Match Reason</label>
    <length>25</length>
    <type>Text</type>
</CustomField>