objects/Invoice__c/fields/ReconciliationStatus__c.field-meta.xml
<CustomField>
    <fullName>ReconciliationStatus__c</fullName>
    <description>When Invoice is created or updated, this field is calculated by apex trigger to indicate if a corresponding Billing Schedule was found or not.</description>
    <label>Reconciliation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exact Match</fullName>
            </value>
            <value>
                <fullName>Semi Match</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>